force-app/main/default/objects/ccrz__E_CategorySpec__c/ccrz__E_CategorySpec__c.object-meta.xml
<CustomObject>
    <description>Assigns a Spec to a Category and gives it a value. All children Categories and Products inherit the Specs assigned to a Category.</description>
    <label>CC Category Spec</label>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Category Spec Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Category Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>