force-app/main/default/objects/ccrz__E_CategorySpec__c/fields/ccrz__CategorySpecId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CategorySpecId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Category Spec Ext Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>